--- a/templates/son.html
+++ b/templates/son.html
@@ -98,7 +98,7 @@
                         <th scope="row">1</th>
                         <td>{{ item.file_up}}</td>
                         <td><a href="media/file_upload/{{ item.file_up }}">tải</a></td>
-                        <td>giải mã</td>
+                        <td><a href="/giaima/{{ item.id }}">giải mã</a></td>
                       </tr>
                       {% endfor %}
                      
